--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task List</title>
     <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        
-
-
+ 
         <div class="new-task">
         </div>
 
-
-
         <div class="columns">
+            
         </div>
 
 
