--- a/index.html
+++ b/index.html
@@ -9,16 +9,8 @@
 </head>
 <body>
     <div class="container">
- 
-        <div class="new-task">
-        </div>
-
-        <div class="columns">
-            
-        </div>
-
-
-        
+        <div class="new-task"></div>
+        <div class="columns"></div>
     </div>
     <script src="src/main.js" type="module"></script>
 </body>
